--- a/cities.html
+++ b/cities.html
@@ -28,7 +28,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>London   (20,478,447)</li>
-
+    <li>Calgary  (20,478,447)</li>
   </ol>
 
 </body>
